commission_prepayment_rule_engine: fix display bug on commission plan (#2484)
Fix #10727

--- a/modules/commission_prepayment_rule_engine/doc/fr/CHANGELOG
+++ b/modules/commission_prepayment_rule_engine/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10727 Bug sur la vue forme du plan de commissionnement
+
 Version 2.2 - 2018-10-12
 * BUG#9618 Correction de l'affichage des paramètres de précompte sur le plan de commissionnement
 
