--- a/modules/commission_prepayment_rule_engine/doc/en/CHANGELOG
+++ b/modules/commission_prepayment_rule_engine/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10727 Bug on display of commission plan form
+
 Version 2.2 - 2018-10-12
 * BUG#9618 Fix display of prepayment configuration on commission plan
 
