account_invoice_slip: Break claim/commission insurer dependency (#2455)
Fix #10638

--- a/modules/account_invoice_slip/doc/fr/CHANGELOG
+++ b/modules/account_invoice_slip/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10638 Suppression de la dépendance entre claim_insurer et commission_insurer
 * BUG#10337 Correction d'un crash au lancement de l'assistant de génération des bordereaux si aucune configuration n'est choisie
 * OTH#000 Correction du relate depuis un bordereau vers les lignes associées
 * FEA#10156 Autoriser l'import/export pour la configuration des bordereaux
