--- a/modules/account_invoice_slip/doc/en/CHANGELOG
+++ b/modules/account_invoice_slip/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10638 Break claim_insurer / commission_insurer dependency
 * BUG#10337 Fix crash when launching slip generation without slip configuration from the application
 * OTH#000 Fix relate on slip for related lines display
 * FEA#10156 Allow import/export for invoice slip configuration
