--- a/modules/claim_indemnification/doc/fr/CHANGELOG
+++ b/modules/claim_indemnification/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10687 Correctif d'un crash occasionnel sur la présence de l'attribut "forced_base_amount"
 * BUG#10708 Ne pas permettre d'ordonnancer un contrat avec un statut devis (en cas de migration)
 * OTH#0000 Suppression de la vue mixte dans les assistants de contrôle / validation d'indemnisations pour résoudre des problèmes de performance
 * FEA#10531 Ajout d'un assistant et d'un batch de vérification de données sinistres migrées (recalcul d'indemnisations)
