claim_pasrau: Fix super call (#2493)
Fix #0000

--- a/modules/claim_pasrau/doc/en/CHANGELOG
+++ b/modules/claim_pasrau/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Fix super call following #10638
 * BUG#10694 CRM file can contain duplicate blocks
 * BUG#10698 Only rely on indemnification data to identify parties to declare, and not on invoice data
 * BUG#10632 Matricule information must not be used to search insured (only ssn must be used)
