--- a/modules/endorsement_process/doc/en/CHANGELOG
+++ b/modules/endorsement_process/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10792 Fix endorsement part union limit
+
 Version 2.2 - 2018-10-12
 * BUG#9331 Fix display of buttons in endorsement parts
 * BUG#9261 Fix behavior if not in a process
