--- a/modules/endorsement_process/doc/fr/CHANGELOG
+++ b/modules/endorsement_process/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10792 Correction de la limite d'union d'avenant unitaire
+
 Version 2.2 - 2018-10-12
 * BUG#9331 Correction de l'affichage des boutons dans les parties d'avenants
 * BUG#9261 Correction du comportement si l'avenant est exécuté hors process
