endorsement: fix display of endorsement.contract (#2505)
Fix #10809

--- a/modules/endorsement/doc/fr/CHANGELOG
+++ b/modules/endorsement/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10809 Correction de l'affichage des sous éléments d'avenants
+
 Version 2.2 - 2018-10-12
 * BUG#9032 Correctif pour supporter la surcharge d'application d'avenant en asynchrone
 * BUG#8822 Pouvoir récuperer la date d'effet initiale d'un contrat suite à l'application d'un avenant
