--- a/modules/endorsement/doc/en/CHANGELOG
+++ b/modules/endorsement/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10809 Fix display of endorsement sub elements
+
 Version 2.2 - 2018-10-12
 * BUG#9032 Fix to handle asynchronous endorsement application override
 * BUG#8822 Modify the getter of contract initial start date in order to get right date value after an endorsement
