claim_indemnification: Fixed a crash when trying to retrieve the list of possible benefits while all the indemnifications are canceled (#2506)
Fix #10791

--- a/modules/claim_indemnification/doc/fr/CHANGELOG
+++ b/modules/claim_indemnification/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10791 Correction d'un crash lorsque l'on essaie de récupérer la liste des prestations à délivrer alors que toutes les indemnisations sont annulées
 * BUG#10687 Correctif d'un crash occasionnel sur la présence de l'attribut "forced_base_amount"
 * BUG#10708 Ne pas permettre d'ordonnancer un contrat avec un statut devis (en cas de migration)
 * OTH#0000 Suppression de la vue mixte dans les assistants de contrôle / validation d'indemnisations pour résoudre des problèmes de performance
