rule_engine: prevent infinite loop when using warning in rule (#2497)
Fix #10786

--- a/modules/rule_engine/doc/en/CHANGELOG
+++ b/modules/rule_engine/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10786 Fix user warning mechanics in rules
 * BUG#10287 Update rule parameters only if they match the modified rule
 * BUG#10221 Fix formatting of errors
 
