--- a/modules/claim_prest_ij_service/doc/en/CHANGELOG
+++ b/modules/claim_prest_ij_service/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10810 Ignore undeclared subscription when integrating a CR file
 * BUG#10723 Prest ij subscription object for company are created in double during person batch and inversely
 * BUG#10576 When in the same CR file there is cr for a SIREN and CR for insured affiliated to this SIREN, legal entity CR information will be propagated to all insured affiliated to this siren. Moreover CR integration for insured could be different from CR integration for insured period (that was not managed)
 * OTH#00000: Iteration on #10393: display all party information in task name
