--- a/modules/account_invoice_slip/locale/fr.po
+++ b/modules/account_invoice_slip/locale/fr.po
@@ -12,15 +12,9 @@ msgstr "Tous les champs doivent être saisis avant de poursuivre"
 
 msgctxt "error:account.invoice.slip.configuration:"
 msgid ""
-"More than one draft slip for parameters:\n"
-"Party: %(party)s\n"
-"Kind: %(business_kind)s\n"
-"Date: %(invoice_date)s"
+"More than one draft slip with domain %s"
 msgstr ""
-"Il y a plus d'un bordereau brouillon correspondant aux critères suivants :\n"
-"Tiers : %(party)s\n"
-"Type : %(business_kind)s\n"
-"Date : %(invoice_date)s"
+"Il y a plus d'un bordereau brouillon correspondant au domaine %s"
 
 msgctxt "error:account.invoice:"
 msgid "Principal line reset following unreconciliation of invoice %s"
