--- a/modules/account_invoice_slip/doc/en/CHANGELOG
+++ b/modules/account_invoice_slip/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10790 Fix compatibility with account_per_product module
 * FEA#10638 Break claim_insurer / commission_insurer dependency
 * BUG#10337 Fix crash when launching slip generation without slip configuration from the application
 * OTH#000 Fix relate on slip for related lines display
