--- a/modules/commission_insurance/doc/fr/CHANGELOG
+++ b/modules/commission_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10540 Ajout de la méthode de commissionnement "Au paiement et comptabilisé" pour permettre au bordereau courtier de se comporter comme le bordereau assureur
 * OTH#0000 Ajout de champs (pour le reporting) permettant d'afficher les montants de taxe / montants totaux proratés sur la période de la commission
 
 Version 2.2 - 2018-10-12
