--- a/modules/commission_insurance/locale/fr.po
+++ b/modules/commission_insurance/locale/fr.po
@@ -1149,6 +1149,10 @@ msgctxt "selection:commission.aggregated,invoice_state:"
 msgid "Validated"
 msgstr "Validée"
 
+msgctxt "selection:commission.plan,commission_method:"
+msgid "On Payment And Accounted"
+msgstr "Au paiement et comptabilisé"
+
 msgctxt "selection:commission.plan,type_:"
 msgid "Broker"
 msgstr "Courtier"
