--- a/modules/commission_insurance_recovery/doc/en/CHANGELOG
+++ b/modules/commission_insurance_recovery/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#0000 Use option's parent contract as the commissioned contract when computing recovery commissions
+
 Version 2.2 - 2018-10-12
 * FEA#9492 Store contract on commissions
 
