claim_health: default claim bank account is contract's direct debit account first if it exists (#2482)
Fix #10683

--- a/modules/claim_health/doc/en/CHANGELOG
+++ b/modules/claim_health/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10683 Default claim bank account is the contract's billing information direct debit account if it exists, otherwise it is one of the subscriber's active account, contrary to before where it was the opposite.
+
 Version 2.2 - 2018-10-12
 * BUG#8957 Make claim_bank_account field visible on covered elements only if it has a health related option
 
