--- a/modules/claim_group_life_fr/doc/fr/CHANGELOG
+++ b/modules/claim_group_life_fr/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10783 Le règle d'invalidité par défaut prend désormais un montant de rente SS sur la période et non l'année 
 * BUG#10631 Correctif sur le calcul du montant des périodes d'annuité
 * BUG#10596 Correctif sur le calcul des périodes d'annuité
 * BUG#10307 Correctifs sur la règle de déduction par défaut
