--- a/modules/migrator_party/doc/fr/CHANGELOG
+++ b/modules/migrator_party/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Correctif migration des lignes d'adresse
 * BUG#10806 Retirer la dépendence au module party_ssn
 Version 2.2 - 2018-10-12
 Version 2.0 - 2018-04-13
