claim_process: Fix referenced before assignment crash (#2460)
Fix #10646

--- a/modules/claim_process/doc/en/CHANGELOG
+++ b/modules/claim_process/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#10646 Fix document request on losses crash when there are no documents to initialize
+
 Version 2.2 - 2018-10-12
 * FEA#9423 Allow to start process from a claim
 
