offered_insurance: Fix domain on extra data definitions (#2492)
Fix #10779

--- a/modules/offered_insurance/doc/fr/CHANGELOG
+++ b/modules/offered_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10779 Correction du domaine sur les données complémentaires
 * OTH#0000 Remplacement de données "champs_technique" du moteur de règle par des vrais données métier
 
 Version 2.2 - 2018-10-12
