--- a/modules/offered_insurance/doc/en/CHANGELOG
+++ b/modules/offered_insurance/doc/en/CHANGELOG
@@ -1,7 +1,8 @@
+* BUG#10779 Fix domain on extra data definitions
 * OTH#0000 Replace some "technical_field" rule engine functions by real business entries
 
 Version 2.2 - 2018-10-12
-* FEA#10080 Add item description configuration to show extra data value in the covered element rec name 
+* FEA#10080 Add item description configuration to show extra data value in the covered element rec name
 * OTH#0000 Replace multiple small list to notebook view on insurer view form
 * BUG#9483 Change xml ids to fix module update
 * BUG#8953 Add a warning when creating multiple insurers on the same party
