--- a/modules/contract_insurance/doc/en/CHANGELOG
+++ b/modules/contract_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10618 Contract parties list must have unique parties
 * BUG#10418 The unicity constraint on the covered elements' party per contract blocks some business cases
 
 Version 2.2 - 2018-10-12
