--- a/modules/claim/doc/en/CHANGELOG
+++ b/modules/claim/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10840 Extract claim related informations in GDPR extract
 * BUG#10811 Allow claim manage right profile to delete claim extra data
 * BUG#10748 Improve performances of service->claim getter
 * BUG#10572 Do not copy link to coverages when copying a benefit
