--- a/modules/party_cog/doc/en/CHANGELOG
+++ b/modules/party_cog/doc/en/CHANGELOG
@@ -1,10 +1,11 @@
+* OTH#0000: Add data to GDPR extract
 * BUG#10480 Error when restarting an address change endorsement
 
 Version 2.2 - 2018-10-12
 * FEA#5633 Merge party_cog and country_address_configuration and enhance address form view
 * FEA#10057 Add phone and email on party textual synthesis
 * FEA#9431 Add function on parties to get the value of an identifier from its type
-* FEA#9655 Add basic data extraction on a party according to the GPDR
+* FEA#9655 Add basic data extraction on a party according to the GDPR
 * FEA#9379 Format and add area code when writing phone number
 * FEA#9687 Display parties with roles in new entry point "Configuration Parties". Display role objects in each dedicated entry point
 * FEA#8739 Add the possibility to call the anonymization wizard from party
