--- a/modules/party_cog/doc/fr/CHANGELOG
+++ b/modules/party_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000: Ajout de donnée à l'export RGPD
 * BUG#10480 Erreur au re-démarrage d'un avenant de changement d'adresse
 
 Version 2.2 - 2018-10-12
