--- a/modules/contract_insurance_invoice/locale/fr.po
+++ b/modules/contract_insurance_invoice/locale/fr.po
@@ -58,6 +58,14 @@ msgstr "Un payeur doit être spécifié"
 
 msgctxt "error:contract:"
 msgid ""
+"No address available for contract: %(contract)s at period [%(start)s, "
+"%(end)s]"
+msgstr ""
+"Aucune adresse disponible pour le contrat: %(contract)s à la période "
+"[%(start)s, %(end)s]"
+
+msgctxt "error:contract:"
+msgid ""
 "This contract can not be renewed because there are missing invoices on the "
 "current term "
 msgstr ""
