--- a/modules/contract_insurance_invoice/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/fr/CHANGELOG
@@ -1,11 +1,10 @@
+* BUG#9867 Ajout d'un message d'erreur si aucune adresse n'est trouvée lors de la finalisation de quittances
 * OTH#00000 Correction d'un plantage lors de la vérification des quittances précédemment postées
 * OTH#00000 Mise à jour de intervaltree en version 3.0
 * BUG#10522 Il n'était pas possible de paramétrer une action par type d'évènement pour la re-génération des quittances non-périodiques
 * BUG#10116 Copier aussi le lien vers le contrat lors de la copie d'une quittance
 * BUG#10223 Correction d'un cas où des périodes de quittancement invalides pouvaient être générées
 * BUG#10168 Correction d'un cas aux limite dans get_invoice_periods qui pouvait donner lieu à une boucle infinie
-
-Version 2.2 - 2018-10-12
 * BUG#9972 Ne pas planter lors du changement de souscripteur dans le processus de souscription
 * BUG#9759 Traduire la fréquence dans le rec_name des détails de ligne de quittance
 * BUG#9857 Déblocage de l'émission des quittances avec une date de fin postérieure à la date de fin du contrat dans le cas où les calculs de prorata l'impose
