--- a/modules/contract_insurance_suspension/doc/fr/CHANGELOG
+++ b/modules/contract_insurance_suspension/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10857 Correction d'un crash lors de la désactivation d'une suspension
 * BUG#10046 Au moment de la désactivation d'une suspension, définir la fin d'une suspension temporaire comme le minimum entre aujourd'hui et la date calculée
 
 Version 2.2 - 2018-10-12
