--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Transform _constraints into validate
 * BUG#10577 Fix on "User" model to make it JSON exportable
 * OTH#0000 Optimize memory usage of "stream" methods
 * BUG#10249 Use fast_invoice chain in default daily batch chain
