--- a/modules/commission_insurance_prepayment/doc/fr/CHANGELOG
+++ b/modules/commission_insurance_prepayment/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#10905 Ajout de la chaine de synchronisation du précompte à la chaine de batch quotidienne
+
 Version 2.2 - 2018-10-12
 * BUG#10058 Ajout de l'action de synchronisation du précompte sur la vue formulaire du contrat
 * BUG#10088 Prise en compte des périodes impayées dans le calcul de la prime de première année pour le précompte
