party_cog: Add max length configuration on country address lines (#2525)
Fix #10851

--- a/modules/party_cog/doc/fr/CHANGELOG
+++ b/modules/party_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10851 Ajout de paramétrage au niveau des lignes d'adresse des pays afin de limiter le nombre de caractères
 * OTH#0000: Ajout de donnée à l'export RGPD
 * BUG#10480 Erreur au re-démarrage d'un avenant de changement d'adresse
 
