--- a/modules/party_cog/locale/fr.po
+++ b/modules/party_cog/locale/fr.po
@@ -2,6 +2,16 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
+msgctxt "error:party.address:"
+msgid ""
+"\"%(value)s\" into the address line \"%(line)s\" exceeds "
+"the configuration limit of character(s) (%(max)s) for the country "
+"\"%(country)s\""
+msgstr ""
+"\"%(value)s\" dans la ligne d'adresse \"%(line)s\" dépasse "
+"la limite de caractère définie dans la configuration (%(max)s) pour "
+"le pays \"%(country)s\""
+
 msgctxt "error:country.zip:"
 msgid ""
 "You cannot modify this zip code:\n"
@@ -56,6 +66,10 @@ msgstr ""
 msgctxt "field:country.address.line,country:"
 msgid "Country"
 msgstr "Pays"
+
+msgctxt "field:country.address.line,max_length:"
+msgid "Max Length"
+msgstr "Longeur maximum"
 
 msgctxt "field:country.address.line,create_date:"
 msgid "Create Date"
@@ -848,6 +862,14 @@ msgstr "Synthèses acteur précédentes"
 msgctxt "help:country.address.line,selection:"
 msgid "A couple of key and label separated by \":\" per line"
 msgstr "Un couple de clé, valeur séparé par un \\\":\\\" par ligne"
+
+msgctxt "help:country.address.line,max_length:"
+msgid ""
+"When validating the address, the corresponding address line "
+"length will be checked not to exceed this limit"
+msgstr ""
+"Lors de la validation des adresses, la taille lignes d'adresse "
+"sera vérifiée afin de ne pas dépasser cette limite"
 
 msgctxt "help:country.address.line,selection_sorted:"
 msgid "If the selection must be sorted on label"
