--- a/modules/commission_insurance_prepayment/doc/en/CHANGELOG
+++ b/modules/commission_insurance_prepayment/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Adapt invoice lines sorting key to python 3
 * FEA#10905 Add prepayment synchronization chain to the daily chain
 
 Version 2.2 - 2018-10-12
